--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@
     box-sizing: border-box;
 }
 
-/* general styling */
-
 body {
     font-family: var(--ff-secondary);
     font-size: 1.25em;
@@ -25,15 +23,16 @@ body {
     align-items: center;
     background-color: var(--clr-accent);
     margin: 0; 
+    min-height: 100vh;
 }
 
 .hero {
+    display: block;
     margin: 1rem auto;
     padding: 2rem 1rem 3.5rem;
     border: 3px solid var(--clr-border);
     border-radius: 20px;
     box-shadow: 0 0 1.5em var(--clr-border);
-    position: relative;
 }
 
 .hero:after {
@@ -94,7 +93,7 @@ body {
     font-weight: normal;
 }
 
-/* typography */
+/* general styling */
 
 h1, h2, h3, p {
     margin: 0;
@@ -210,6 +209,7 @@ span {
 }
 
 
+
 /* modals */
 
 .open-modal { 
@@ -226,13 +226,13 @@ span {
 }
 
 .modal-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: var(--clr-border);
     box-shadow: 0 0 10px var(--clr-accent-dark);
     color: var(--clr-accent-dark);
-    display: block;
-    position: fixed;
-    width: 80%;
-    top: 20%;
     padding: 1em;
     z-index: 2;
     border-radius: 10px;
@@ -329,6 +329,12 @@ span {
         margin-left: 5rem;
         text-align: center;
     }
+
+    /* #alley span {
+        text-align: left;
+        margin-left: 2.2rem;
+    } */
+    
 
     #alley h2 {
         font-size: 2.25rem;
