--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
 }
 
 .hero {
+    position: relative;
     display: block;
     margin: 1rem auto;
     padding: 2rem 1rem 3.5rem;
@@ -155,7 +156,6 @@ span {
 .main-grid {
     display: grid;
     gap: 1.5rem; 
-
 }
 
 /* beverage */
@@ -171,7 +171,6 @@ span {
     background-color:var(--clr-primary);
     justify-content: center;
     align-items: center;
-    
     transition: transform 1s ease-in-out;
     position: relative;
 }
