--- a/style.css
+++ b/style.css
@@ -88,10 +88,11 @@ body {
 }
 
 #alley p {
-    margin-top: .5rem;
+    margin: .5rem 0 .7rem;
     font-size: 1rem;
     text-transform: none;
     font-weight: normal;
+    text-transform: uppercase;
 }
 
 /* general styling */
@@ -321,10 +322,8 @@ span {
         font-size: 14rem;
         grid-column: 3 / -1;
         grid-row: 1 / 3;
-        justify-self: flex-start;
         padding-bottom: .8rem; 
         align-items: baseline;
-        margin-left: 5rem;
         text-align: center;
     }
 
